--- a/main.css
+++ b/main.css
@@ -2,4 +2,34 @@ input {
 	width: 100;
 	height: 100;
 	font-size: 20pt;
+	margin: 0;
+	padding: 0;
+	border: none;
+	background: #00000000;
+	text-align: center;
+}
+
+.inputs {
+	width: 400;
+	height: 400;
+	margin: 0;
+	padding: 0;
+	border: none;
+	position: absolute;
+	z-index: 1;
+	background: #00000000;
+}
+
+span {
+	width: 400;
+	height: 100;
+	margin: 0;
+	padding: 0;
+	border: none;
+	background: #00000000;
+}
+
+canvas {
+	position: absolute;
+	z-index: 0;
 }
