--- a/main.css
+++ b/main.css
@@ -1,4 +1,18 @@
+body{
+	margin: 0 auto;
+}
+
 h1 {
+	font-size: 30pt;
+	border: none;
+	background: #00000000;
+	font-family: 'Roboto', sans-serif;
+	position: absolute;
+	font-weight: 600;
+	margin: 0;
+}
+
+h2 {
 	width: 200;
 	font-size: 20pt;
 	margin: 0;
@@ -26,15 +40,27 @@ input {
 	position: absolute;
 }
 
-.inputs {
+div.you {
 	width: 800;
 	height: 800;
-	margin: 0;
+	margin: 80 0 0 0;
 	padding: 0;
 	border: none;
 	position: absolute;
 	z-index: 1;
 	background: #00000000;
+}
+
+div.computer {
+	width: 800;
+	height: 800;
+	margin: 80 0 0 0;
+	padding: 0;
+	border: none;
+	position: absolute;
+	z-index: 1;
+	background: #00000000;
+	left: 1010;
 }
 
 span {
@@ -56,13 +82,14 @@ span div {
 canvas {
 	position: absolute;
 	z-index: 0;
+	top: 80;
 }
 
 .switch {
-	left: 1000;
-	width: 280;
-	height: 800;
-	margin: 0;
+	top: 880;
+	width: 1800;
+	height: 100;
+	margin: 0 0;
 	padding: 0;
 	border: none;
 	position: absolute;
@@ -70,25 +97,79 @@ canvas {
 	background: #00000000;
 }
 
-.switch div {
-	width: 100;
-	height: 800;
-	margin: 0 20;
+.switch div.youbtn {
+	width: 800;
+	height: 100;
+	margin: 10 0;
 	padding: 0;
 	border: none;
 	float: left;
+	position: absolute;
 }
 
-h2 {
+.switch div.computerbtn {
+	left: 1000;
+	width: 800;
+	height: 100;
+	margin: 10 0;
+	padding: 0;
+	border: none;
+	float: right;
+	position: absolute;
+}
+
+.youbtn h3 {
+	height: 40;
+	margin: 10 0;
 	font-size: 18pt;
 	font-family: 'Roboto', sans-serif;
-	text-align: center;
+	float: left;
 }
 
-button {
+.computerbtn h3 {
+	height: 40;
+	margin: 10 0;
+	font-size: 18pt;
+	font-family: 'Roboto', sans-serif;
+	float: right;
+}
+
+.youbtn button {
 	width: 100;
 	height: 40;
-	margin: 20 0;
+	margin: 10 0 0 5;
 	font-size: 15pt;
 	font-family: 'Roboto', sans-serif;
+	float: right;
+}
+
+.computerbtn button {
+	width: 100;
+	height: 40;
+	margin: 10 5 0 0;
+	font-size: 15pt;
+	font-family: 'Roboto', sans-serif;
+	float: left;
+}
+
+footer {
+	top: 1000;
+	width: 1800;
+	margin: 0;
+	position: absolute;
+	vertical-align: bottom;
+}
+
+footer p {
+	display: inline-block;
+	margin: 0;
+	float: left;
+	vertical-align: bottom;
+}
+
+footer img {
+	display: inline-block;
+	width: 200;
+	margin: 0;
+	float: right;
 }
