--- a/main.css
+++ b/main.css
@@ -89,7 +89,7 @@ canvas {
 	top: 80;
 }
 
-.switch {
+.select {
 	top: 880;
 	width: 1800;
 	height: 100;
@@ -101,7 +101,7 @@ canvas {
 	background: #00000000;
 }
 
-.switch div.youbtn {
+.select div.youbtn {
 	width: 800;
 	height: 100;
 	margin: 10 0;
@@ -111,7 +111,7 @@ canvas {
 	position: absolute;
 }
 
-.switch div.computerbtn {
+.select div.computerbtn {
 	left: 1000;
 	width: 800;
 	height: 100;
@@ -124,16 +124,16 @@ canvas {
 
 .youbtn h3 {
 	height: 40;
-	margin: 10 0;
-	font-size: 18pt;
+	margin: 15 0;
+	font-size: 20pt;
 	font-family: 'Roboto', sans-serif;
 	float: left;
 }
 
 .computerbtn h3 {
 	height: 40;
-	margin: 10 0;
-	font-size: 18pt;
+	margin: 15 0;
+	font-size: 20pt;
 	font-family: 'Roboto', sans-serif;
 	float: right;
 }
@@ -177,4 +177,60 @@ footer img {
 	width: 200;
 	margin: 0;
 	float: right;
+}
+
+/* The switch - the box around the slider */
+label.switch {
+	position: relative;
+	display: inline-block;
+	width: 70;
+	height: 40;
+	float: right;
+	margin: 10 20 0 5;
+}
+
+/* Hide default HTML checkbox */
+label.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 30;
+	width: 30;
+	left: 5;
+	bottom: 5;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+input:checked + .slider {
+	background-color: #2196F3;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1 #2196F3;
+}
+
+input:checked + .slider:before {
+	left: 35;
 }
